fix: gap on products' tab switchers to fit figma layout

--- a/coffee-house/scss/components/_tabs.scss
+++ b/coffee-house/scss/components/_tabs.scss
@@ -7,6 +7,6 @@
 
   &__switchers {
     display: flex;
-    gap: 1.6rem;
+    gap: 1.45rem;
   }
 }
